--- a/index.html
+++ b/index.html
@@ -6,9 +6,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="A simple, accessible todo application to track and manage your tasks" />
     <title>Todo App - Manage Your Tasks</title>
+    <!-- Prevent theme flash - must match ThemeContext.jsx implementation -->
+    <script>
+      (function() {
+        // Get theme from localStorage or system preference
+        const storedTheme = localStorage.getItem('theme');
+        const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+        const isDark = storedTheme === 'dark' || (storedTheme !== 'light' && prefersDark);
+
+        // Define background colors
+        const darkBackground = '#353747'; // Slightly lighter than widget background
+        const lightBackground = '#f3f4f6'; // Light gray background
+
+        // Apply theme immediately before any content renders
+        if (isDark) {
+          document.documentElement.classList.add('dark-theme');
+          document.documentElement.setAttribute('data-theme', 'dark');
+          document.documentElement.style.backgroundColor = darkBackground;
+        } else {
+          document.documentElement.classList.remove('dark-theme');
+          document.documentElement.setAttribute('data-theme', 'light');
+          document.documentElement.style.backgroundColor = lightBackground;
+        }
+      })();
+    </script>
+    <style>
+      /* Smooth transition between themes */
+      :root {
+        transition: background-color 0.2s ease;
+      }
+
+      /* Ensure body gets proper background */
+      body {
+        background-color: inherit;
+        margin: 0;
+        min-height: 100vh;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script>
+      // Mark as hydrated to show content
+      document.documentElement.classList.add('hydrated');
+    </script>
   </body>
 </html>
